# historic-bibletime-cvs

./: .cvsignore  AUTHORS.in  BibleTime.kdevelop  ChangeLog  INSTALL  INSTALL.in  LICENSE  Makefile  Makefile.am  Makefile.cvs  Makefile.in  NEWS.in  README  README.in  TODO.in  acinclude.m4  aclocal.m4  am_edit  autogen.sh  bibleinstaller.kdevprj  bibletime.desktop.in  bibletime.doxygen  bibletime.kdevprj  bibletime.lsm.in  bibletime.m4  bibletime.spec.in  bibletime.start  clucene.m4  config.h.in  configure  configure.in  configure.in.in  format_sourcecode.sh  gmon.out  make-messages.sh  messages  packaging-howto.txt  setupwizard.kdevprj  subdirs  sword.m4
admin/: Makefile.am  Makefile.common  acinclude.m4.in  am_edit  cvs.sh  detect-autoconf.sh
bibleinstaller/: Makefile.am  main.cpp
bibletime/: .cvsignore  BibleTime.kdoc  DEADJOE  Makefile.am  Makefile.in  bibletime.cpp  bibletime.h  bibletime_dcop.cpp  bibletime_init.cpp  bibletime_slots.cpp  bibletimeapp.cpp  bibletimeapp.h  bibletimeinterface.h  bt-printing  main.cpp  resource.h  ressource.h  structdef.h  tooltipdef.h  whatsthisdef.h
bibletime/backend/: Makefile.am  Makefile.in  bt_basicfilter.cpp  bt_basicfilter.h  bt_gbfhtml.cpp  bt_gbfhtml.h  bt_osishtml.cpp  bt_osishtml.h  bt_plainhtml.cpp  bt_plainhtml.h  bt_rwphtml.cpp  bt_rwphtml.h  bt_thmlhtml.cpp  bt_thmlhtml.h  bt_thmlplain.h  btstringmgr.cpp  btstringmgr.h  cbackend.h  cbookdisplay.cpp  cbookdisplay.h  cchapterdisplay.cpp  cchapterdisplay.h  cdisplayrendering.cpp  cdisplayrendering.h  cdisplaytemplatemgr.cpp  cdisplaytemplatemgr.h  centrydisplay.cpp  centrydisplay.h  cfiltertool.cpp  cfiltertool.h  chtmlbookdisplay.cpp  chtmlbookdisplay.h  chtmlchapterdisplay.cpp  chtmlchapterdisplay.h  chtmlentrydisplay.cpp  chtmlentrydisplay.h  chtmlexportrendering.cpp  chtmlexportrendering.h  ckey.h  clanguagemgr.cpp  (+34 more)
bibletime/backend/sword_backend/: Makefile.am  Makefile.in  chtmlchapterdisplay.cpp  chtmlentrydisplay.cpp  chtmlentrydisplay.h  cswordbackend.cpp  cswordbackend.h  cswordbiblemoduleinfo.cpp  cswordbiblemoduleinfo.h  cswordcommentarymoduleinfo.cpp  cswordcommentarymoduleinfo.h  cswordconfig.cpp  cswordconfig.h  cswordkey.cpp  cswordkey.h  cswordldkey.cpp  cswordldkey.h  cswordlexiconmoduleinfo.cpp  cswordlexiconmoduleinfo.h  cswordmoduleinfo.cpp  cswordmoduleinfo.h  cswordmodulesearch.cpp  cswordmodulesearch.h  cswordversekey.cpp  cswordversekey.h  libbibletime_swordbackend.la
bibletime/display-templates/: .cvsignore  Blue.tmpl  Crazy.tmpl  Default.tmpl  Green.tmpl  HighContrast.tmpl  Makefile.am  Simple.tmpl  basic_template.txt  create_code.pl  names.conf  template-init.cpp
bibletime/docs/: Makefile.am  Makefile.in  ReadMe_ChangeLog.txt  documentation-links.html  gen_am.sh  index.docbook  index.html
bibletime/docs/cs/: Makefile.am  tipdatabase
bibletime/docs/de/: Makefile.am  Makefile.in  index.sgml  tipdatabase
bibletime/docs/en/: Makefile.am  Makefile.in  tipdatabase
bibletime/docs/es/: Makefile.am  tipdatabase
bibletime/docs/it/: Makefile.am  tipdatabase
bibletime/docs/nl/: Makefile.am  tipdatabase
bibletime/docs/no/: Makefile.am  tipdatabase
bibletime/docs/sk/: Makefile.am  Makefile.in  tipdatabase
bibletime/frontend/: .cvsignore  Makefile.am  Makefile.in  actions.cpp  actions.h  btinstallmgr.cpp  btinstallmgr.h  cbtconfig.cpp  cbtconfig.h  cdisplaywidget.cpp  cdisplaywidget.h  cdragdropmgr.cpp  cdragdropmgr.h  cexportmanager.cpp  cexportmanager.h  chelpmgr.cpp  chelpmgr.h  chtmldialog.cpp  chtmldialog.h  chtmlwidget.cpp  chtmlwidget.h  cinfodisplay.cpp  cinfodisplay.h  cinputdialog.cpp  cinputdialog.h  clanguagemgr.cpp  clanguagemgr.h  cmanageindiceswidget.cpp  cmanageindiceswidget.h  cmdiarea.cpp  cmdiarea.h  cmoduleindexdialog.cpp  coptionsdialog.cpp  coptionsdialog.h  cpointers.cpp  cpointers.h  cprinter.cpp  cprinter.h  cprofile.cpp  cprofile.h  (+29 more)
bibletime/frontend/display/: Makefile.am  cdisplay.cpp  cdisplay.h  chtmlreaddisplay.cpp  chtmlreaddisplay.h  chtmlwritedisplay.cpp  chtmlwritedisplay.h  cplainwritedisplay.cpp  cplainwritedisplay.h  creaddisplay.cpp  creaddisplay.h  cwritedisplay.cpp  cwritedisplay.h
bibletime/frontend/displaywindow/: Makefile.am  cbiblereadwindow.cpp  cbiblereadwindow.h  cbookreadwindow.cpp  cbookreadwindow.h  cbuttons.cpp  cbuttons.h  ccommentaryreadwindow.cpp  ccommentaryreadwindow.h  cdisplaysettingsbutton.cpp  cdisplaywindow.cpp  cdisplaywindow.h  chtmlwritewindow.cpp  chtmlwritewindow.h  clexiconreadwindow.cpp  clexiconreadwindow.h  cmodulechooserbar.cpp  cmodulechooserbar.h  cmodulechooserbutton.cpp  cmodulechooserbutton.h  cplainwritewindow.cpp  cplainwritewindow.h  creadwindow.cpp  creadwindow.h  cwritewindow.cpp  cwritewindow.h
bibletime/frontend/groupmanager/: Makefile.am  Makefile.in  cgroupmanager.cpp  cgroupmanager.h  cgroupmanageritem.cpp  cgroupmanageritem.h
bibletime/frontend/keychooser/: Makefile.am  Makefile.in  cbiblekeychooser.cpp  cbiblekeychooser.h  cfx_btn.cpp  (+17 more)
bibletime/libhtmlparse/: Makefile  Makefile.am  Makefile.in  libhtmlparse.c  libhtmlparse.h  string_funcs.c
bibletime/pics/: Makefile.am  Makefile.in  gen_am.sh  gen_am_pics.pl  gen_am_pics.sh  startuplogo.xcf
bibletime/printing/: Makefile.am  Makefile.in  cprintdialogpages.cpp  cprintdialogpages.h  cprinter.cpp  cprinter.h  cprinterdialog.cpp  cprinterdialog.h  cprintitem.cpp  cprintitem.h  cprintitemlist.cpp  cprintitemlist.h  cstyle.cpp  cstyle.h  cstyleeditordialog.cpp  cstyleeditordialog.h  cstyleformat.cpp  cstyleformat.h  cstyleformatframe.cpp  cstyleformatframe.h  cstylelist.cpp  cstylelist.h
bibletime/tests/: Makefile.am  cswordversekey_test.cpp  main.cpp
bibletime/util/: Makefile.am  autoptrvector.h  cpointers.cpp  cpointers.h  cresmgr.cpp  cresmgr.h  ctoolclass.cpp  ctoolclass.h  directoryutil.cpp  directoryutil.h  scoped_resource.h
bibletime/xml/: Makefile.am  Makefile.in  bibletimeui.rc
pot/: Makefile.am  bibletime.pot  documentation.pot  handbook.pot  howto.pot  messages.pot
setupwizard/: Makefile.am  btsetupwizard.cpp  btsetupwizard.h  install.cpp  install.h  main.cpp  remove.cpp  remove.h
(+2042 files in other folders)
