dnl    This file is part of the KDE libraries/packages
dnl    Copyright (C) 2001 Stephan Kulow (coolo@kde.org)

dnl    This file is free software; you can redistribute it and/or
dnl    modify it under the terms of the GNU Library General Public
dnl    License as published by the Free Software Foundation; either
dnl    version 2 of the License, or (at your option) any later version.

dnl    This library is distributed in the hope that it will be useful,
dnl    but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl    Library General Public License for more details.

dnl    You should have received a copy of the GNU Library General Public Licensednl    along with this library; see the file COPYING.LIB.  If not, write to
dnl    the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
dnl    Boston, MA 02111-1307, USA.

# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM
dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(bibletime, 1.1pre) dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(no)
AC_ENABLE_STATIC(yes)
KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

AC_PATH_KDE

dnl in this space add everything you want to check for;
dnl examples are specific headers, libraries, etc.
dnl everything to compile and run a KDE program is already checked

CPPFLAGS="$CPPFLAGS -D_REENTRANT -DQT_NO_ASCII_CAST -DQT_NO_COMPAT -DQT_CLEAN_NAMESPACE"
AC_CHECK_STATIC_LINKING(ac_use_static)
AC_CHECK_SWORD(1.5.3, [$ac_use_static])

dnl Chek for the used distribution
AC_CHECK_DISTRIBUTION

dnl add here all your Makefiles. They are created by configure
dnl AC_OUTPUT(NEWS README INSTALL TODO bibletime.lsm bibletime.spec bibletime.desktop)

dnl echo "Executing perl am_edit ..."
dnl perl am_edit
KDE_CREATE_SUBDIRSLIST
AC_OUTPUT( \
./Makefile \
admin/Makefile \
bibletime/Makefile \
bibletime/backend/Makefile \
bibletime/docs/Makefile \
bibletime/docs/cs/Makefile \
bibletime/docs/cs/handbook/Makefile \
bibletime/docs/cs/handbook/html/Makefile \
bibletime/docs/cs/helpdialog/Makefile \
bibletime/docs/cs/helpdialog/html/Makefile \
bibletime/docs/cs/howto/Makefile \
bibletime/docs/cs/howto/html/Makefile \
bibletime/docs/cs/install/Makefile \
bibletime/docs/cs/install/html/Makefile \
bibletime/docs/de/Makefile \
bibletime/docs/de/handbook/Makefile \
bibletime/docs/de/handbook/html/Makefile \
bibletime/docs/de/helpdialog/Makefile \
bibletime/docs/de/helpdialog/html/Makefile \
bibletime/docs/de/howto/Makefile \
bibletime/docs/de/howto/html/Makefile \
bibletime/docs/de/install/Makefile \
bibletime/docs/de/install/html/Makefile \
bibletime/docs/en/Makefile \
bibletime/docs/en/handbook/Makefile \
bibletime/docs/en/handbook/html/Makefile \
bibletime/docs/en/helpdialog/Makefile \
bibletime/docs/en/helpdialog/html/Makefile \
bibletime/docs/en/howto/Makefile \
bibletime/docs/en/howto/html/Makefile \
bibletime/docs/en/install/Makefile \
bibletime/docs/en/install/html/Makefile \
bibletime/docs/es/Makefile \
bibletime/docs/es/handbook/Makefile \
bibletime/docs/es/handbook/html/Makefile \
bibletime/docs/es/helpdialog/Makefile \
bibletime/docs/es/helpdialog/html/Makefile \
bibletime/docs/es/howto/Makefile \
bibletime/docs/es/howto/html/Makefile \
bibletime/docs/es/install/Makefile \
bibletime/docs/es/install/html/Makefile \
bibletime/docs/it/Makefile \
bibletime/docs/it/handbook/Makefile \
bibletime/docs/it/handbook/html/Makefile \
bibletime/docs/it/helpdialog/Makefile \
bibletime/docs/it/helpdialog/html/Makefile \
bibletime/docs/it/howto/Makefile \
bibletime/docs/it/howto/html/Makefile \
bibletime/docs/it/install/Makefile \
bibletime/docs/it/install/html/Makefile \
bibletime/docs/nl/Makefile \
bibletime/docs/nl/handbook/Makefile \
bibletime/docs/nl/handbook/html/Makefile \
bibletime/docs/nl/helpdialog/Makefile \
bibletime/docs/nl/helpdialog/html/Makefile \
bibletime/docs/nl/howto/Makefile \
bibletime/docs/nl/howto/html/Makefile \
bibletime/docs/nl/install/Makefile \
bibletime/docs/nl/install/html/Makefile \
bibletime/docs/no/Makefile \
bibletime/docs/no/handbook/Makefile \
bibletime/docs/no/handbook/html/Makefile \
bibletime/docs/no/helpdialog/Makefile \
bibletime/docs/no/helpdialog/html/Makefile \
bibletime/docs/no/howto/Makefile \
bibletime/docs/no/howto/html/Makefile \
bibletime/docs/no/install/Makefile \
bibletime/docs/no/install/html/Makefile \
bibletime/docs/sk/Makefile \
bibletime/docs/sk/handbook/Makefile \
bibletime/docs/sk/handbook/html/Makefile \
bibletime/docs/sk/helpdialog/Makefile \
bibletime/docs/sk/helpdialog/html/Makefile \
bibletime/docs/sk/howto/Makefile \
bibletime/docs/sk/howto/html/Makefile \
bibletime/docs/sk/install/Makefile \
bibletime/docs/sk/install/html/Makefile \
bibletime/frontend/Makefile \
bibletime/frontend/groupmanager/Makefile \
bibletime/frontend/keychooser/Makefile \
bibletime/frontend/optionsdialog/Makefile \
bibletime/frontend/presenters/Makefile \
bibletime/frontend/searchdialog/Makefile \
bibletime/frontend/thirdparty/Makefile \
bibletime/frontend/thirdparty/qt3stuff/Makefile \
bibletime/pics/Makefile \
bibletime/pics/highcolor/Makefile \
bibletime/pics/highcolor/16x16/Makefile \
bibletime/pics/highcolor/22x22/Makefile \
bibletime/pics/highcolor/32x32/Makefile \
bibletime/pics/highcolor/48x48/Makefile \
bibletime/pics/lowcolor/Makefile \
bibletime/pics/lowcolor/16x16/Makefile \
bibletime/pics/lowcolor/22x22/Makefile \
bibletime/pics/lowcolor/32x32/Makefile \
bibletime/printing/Makefile \
bibletime/xml/Makefile \
po/Makefile \
NEWS README INSTALL TODO bibletime.lsm bibletime.spec bibletime.desktop \
)
