dnl    This file is part of the KDE libraries/packages
dnl    Copyright (C) 2001 Stephan Kulow (coolo@kde.org)

dnl    This file is free software; you can redistribute it and/or
dnl    modify it under the terms of the GNU Library General Public
dnl    License as published by the Free Software Foundation; either
dnl    version 2 of the License, or (at your option) any later version.

dnl    This library is distributed in the hope that it will be useful,
dnl    but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl    Library General Public License for more details.

dnl    You should have received a copy of the GNU Library General Public Licensednl    along with this library; see the file COPYING.LIB.  If not, write to
dnl    the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
dnl    Boston, MA 02111-1307, USA.

# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM
dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(bibletime, 1.1) dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(no)
AC_ENABLE_STATIC(yes)
KDE_PROG_LIBTOOL

AM_MAINTAINER_MODE

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS

AC_PATH_KDE

dnl in this space add everything you want to check for;
dnl examples are specific headers, libraries, etc.
dnl everything to compile and run a KDE program is already checked

CPPFLAGS="$CPPFLAGS -DQT_NO_ASCII_CAST -DQT_NO_COMPAT -DQT_CLEAN_NAMESPACE -Wall -I\$(top_srcdir)/ -I\$(top_srcdir)/bibletime"
AC_CHECK_STATIC_LINKING(ac_use_static)
AC_CHECK_SWORD(1.5.3, [$ac_use_static])

dnl Chek for the used distribution
AC_CHECK_DISTRIBUTION

dnl add here all your Makefiles. They are created by configure
dnl AC_OUTPUT(NEWS README INSTALL TODO bibletime.lsm bibletime.spec bibletime.desktop)

dnl echo "Executing perl am_edit ..."
dnl perl am_edit
KDE_CREATE_SUBDIRSLIST
AC_OUTPUT( \
./Makefile \
admin/Makefile \
bibletime/Makefile \
bibletime/backend/Makefile \
bibletime/frontend/Makefile \
bibletime/frontend/groupmanager/Makefile \
bibletime/frontend/keychooser/Makefile \
bibletime/frontend/presenters/Makefile \
bibletime/frontend/searchdialog/Makefile \
bibletime/frontend/thirdparty/Makefile \
bibletime/frontend/thirdparty/qt3stuff/Makefile \
bibletime/pics/Makefile \
bibletime/pics/highcolor/Makefile \
bibletime/pics/highcolor/16x16/Makefile \
bibletime/pics/highcolor/22x22/Makefile \
bibletime/pics/highcolor/32x32/Makefile \
bibletime/pics/highcolor/48x48/Makefile \
bibletime/pics/lowcolor/Makefile \
bibletime/pics/lowcolor/16x16/Makefile \
bibletime/pics/lowcolor/22x22/Makefile \
bibletime/pics/lowcolor/32x32/Makefile \
bibletime/printing/Makefile \
bibletime/printing/style-data/Makefile \
bibletime/util/Makefile \
bibletime/xml/Makefile \
NEWS README INSTALL TODO bibletime.lsm bibletime.spec bibletime.desktop \
)
