EXTRA_DIST=\
ChangeLog\
Makefile.common\
acinclude.m4.in\
am_edit\
conf.change.pl\
config.guess\
config.pl\
config.sub\
configure.in.min\
debianrules\
depcomp\
install-sh\
libtool.m4.in\
ltconfig\
ltmain.sh\
missing\
mkinstalldirs\
old-libtool.m4.in\
old-ltcf-c.sh\
old-ltcf-cxx.sh\
old-ltcf-gcj.sh\
old-ltconfig\
old-ltmain.sh\
ylwrap
