libbackend_a_METASOURCES = AUTO
noinst_LIBRARIES = libbackend.a

INCLUDES = $(all_includes)

libbackend_a_SOURCES = cswordmodulesearch.cpp cswordbackend.cpp cswordkey.cpp cswordldkey.cpp cswordversekey.cpp cswordmoduleinfo.cpp cswordlexiconmoduleinfo.cpp cswordcommentarymoduleinfo.cpp cswordbiblemoduleinfo.cpp cswordbookmoduleinfo.cpp cswordtreekey.cpp creferencemanager.cpp bt_thmlhtml.cpp bt_osishtml.cpp bt_gbfhtml.cpp bt_plainhtml.cpp centrydisplay.cpp clanguagemgr.cpp cfiltertool.cpp cdisplaytemplatemgr.cpp ctextrendering.cpp btstringmgr.cpp cbookdisplay.cpp cchapterdisplay.cpp chtmlexportrendering.cpp cplaintextexportrendering.cpp cdisplayrendering.cpp osismorphsegmentation.cpp

all_headers = cswordbiblemoduleinfo.h \
cswordcommentarymoduleinfo.h \
cswordlexiconmoduleinfo.h \
cswordkey.h \
cswordversekey.h \
cswordldkey.h \
cswordbackend.h \
cswordmoduleinfo.h \
cswordmodulesearch.h \
creferencemanager.h \
cswordbookmoduleinfo.h \
cswordtreekey.h \
bt_thmlhtml.h \
bt_osishtml.h \
bt_gbfhtml.h \
bt_plainhtml.h \
centrydisplay.h \
clanguagemgr.h \
cfiltertool.h \
cdisplaytemplatemgr.h \
ctextrendering.h \
btstringmgr.h \
cbookdisplay.h \
cchapterdisplay.h \
chtmlexportrendering.h \
cplaintextexportrendering.h \
cdisplayrendering.h \
osismorphsegmentation.h

EXTRA_DIST = $(libbackend_a_SOURCES) $(all_headers)
