INCLUDES = $(all_includes)
libfrontend_a_METASOURCES = AUTO
noinst_LIBRARIES = libfrontend.a

libfrontend_a_SOURCES = \
chtmldialog.cpp \
cbtconfig.cpp \
cinputdialog.cpp \
coptionsdialog.cpp \
cswordsetupdialog.cpp \
cprofilemgr.cpp \
cprofile.cpp \
cprofilewindow.cpp \
cexportmanager.cpp \
cmdiarea.cpp \
kstartuplogo.cpp \
ctooltipmanager.cpp \
ctooltip.cpp \
cdragdropmgr.cpp

all_headers = cmdiarea.h \
chtmldialog.h \
cbtconfig.h \
cinputdialog.h \
coptionsdialog.h \
cswordsetupdialog.h \
cprofilemgr.h \
cprofile.h \
cprofilewindow.h \
cexportmanager.h \
cmdiarea.h \
kstartuplogo.h \
ctooltipmanager.h \
ctooltip.h \
cdragdropmgr.h

EXTRA_DIST = $(libfrontend_a_SOURCES) $(all_headers)

SUBDIRS = \
mainindex \
keychooser \
displaywindow \
display \
searchdialog




